book and media report content update Tue 11/23/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -86,6 +86,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1577550853l/45032059._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1568465124l/43618654.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1309552288l/91475.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1395610974l/17331349.jpg" width="300" >
 </div>
 </body>
 </html>
