--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/23/2021 06:00<br>
+Completed books sorted by folder - 11/23/2021 10:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 79 books - 741H 20M / 30D 21H 20M<br>
+Completed in 2021 : 80 books - 748H 27M / 31D 4H 27M<br>
 Total Comic Trades : 31<br>
-Average book length : 9H 23M<br>
-Hours read per week : 15H 52M<br>
-On pace to complete 88 books (828H 0M / 34D 12H 0M) by the end of 2021<br>
+Average book length : 9H 21M<br>
+Hours read per week : 16H 1M<br>
+On pace to complete 89 books (835H 54M / 34D 19H 54M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -90,6 +90,7 @@ The Signal and the Noise - Nate Silver - 15H 47M<br>
 The Teenage Brain - A Neuroscientist's Survival Guide to Raising Adolescents and Young Adults - Frances E. Jensen - 9H 4M<br>
 The Tipping Point - Malcolm Gladwell - 8H 36M<br>
 The Wheel of Time 01 - The Eye of the World - 29H 59M<br>
+Think Like a Freak - Steven D. Levitt - 7H 7M<br>
 Venomverse - 3H 59M<br>
 VocabuLearn German Complete - 9H 2M<br>
 Vote Loki - 3H 44M<br>
@@ -482,9 +483,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1822H 24M / 75D 22H 24M<br>
+Queue - Current Audiobooks - 139 books - 1815H 17M / 75D 15H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
+Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -503,22 +504,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2306H 12M / 96D 2H 12M<br>
+170 queued items: 2299H 5M / 95D 19H 5M<br>
 0 reserve titles are marked as high priority<br>
-20.45% of reserve items are queued<br>
+20.36% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 836 titles - 10182H 43M / 424D 6H 43M<br>
-Average completed per year: 46.3 titles - 508H 11M / 21D 4H 11M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
+Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
+Average completed per year: 46.4 titles - 508H 59M / 21D 4H 59M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:02.159 (2.159 seconds)<br>
-Total time including file writes: 00:00:02..16 (2.16 seconds)
+Total time to process all reports: 00:00:02.913 (2.913 seconds)<br>
+Total time including file writes: 00:00:02.913 (2.913 seconds)
 </div>
 </body>
 </html>
