--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 11/23/2021 06:00<br>
+Completed books sorted by length - 11/23/2021 10:00<br>
 -----------------------------------------------------<br>
  <br>
-412 books<br>
+413 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -146,6 +146,7 @@ The Chronicles of Amber 02 - The Guns of Avalon - 6H 57M (Completed in 2016)<br>
 Doomsday Clock 1 - 6H 58M (Completed in 2021)<br>
 David and Goliath - Malcolm Gladwell - 7H 2M (Completed in 2021)<br>
 Everything is Fcked - Mark Manson - 7H 4M (Completed in 2019)<br>
+Think Like a Freak - Steven D. Levitt - 7H 7M (Completed in 2021)<br>
 Into the Wild - Jon Krakauer - 7H 7M (Completed in 2019)<br>
 How To Win Friends & Influence People in the Digital Age - Dale Carnegie - 7H 8M (Completed in 2020)<br>
 The Batman Who Laughs - 7H 13M (Completed in 2021)<br>
@@ -399,9 +400,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1822H 24M / 75D 22H 24M<br>
+Queue - Current Audiobooks - 139 books - 1815H 17M / 75D 15H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
+Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -420,22 +421,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2306H 12M / 96D 2H 12M<br>
+170 queued items: 2299H 5M / 95D 19H 5M<br>
 0 reserve titles are marked as high priority<br>
-20.45% of reserve items are queued<br>
+20.36% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 836 titles - 10182H 43M / 424D 6H 43M<br>
-Average completed per year: 46.3 titles - 508H 11M / 21D 4H 11M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
+Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
+Average completed per year: 46.4 titles - 508H 59M / 21D 4H 59M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:02.159 (2.159 seconds)<br>
-Total time including file writes: 00:00:02..16 (2.16 seconds)
+Total time to process all reports: 00:00:02.913 (2.913 seconds)<br>
+Total time including file writes: 00:00:02.913 (2.913 seconds)
 </div>
 </body>
 </html>
