--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 11/23/2021 06:00<br>
+Reserved books sorted by folder - 11/23/2021 10:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 140 books - 1822H 24M / 75D 22H 24M<br>
+Queue - Current Audiobooks : 139 books - 1815H 17M / 75D 15H 17M<br>
  <br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
 13 Things Mentally Strong People Don't Do - Amy Morin - 6H 37M<br>
@@ -131,7 +131,6 @@ The Wheel of Time 03 - The Dragon Reborn - 24H 48M<br>
 The Wheel of Time 04 - The Shadow Rising - 41H 25M<br>
 The World Is Flat - A Brief History of the Twenty-first Century - Thomas L. Friedman - 27H 22M<br>
 The World of Ice & Fire - George R.R. Martin - 21H 28M<br>
-Think Like a Freak - Steven D. Levitt - 7H 7M<br>
 Thrawn 1 - Thrawn - Timothy Zahn - 17H 1M<br>
 Time Travel - A History - James Gleick - 10H 3M<br>
 Trick Mirror - Reflections on Self-Delusion - Jia Tolentino - 9H 48M<br>
@@ -879,9 +878,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1822H 24M / 75D 22H 24M<br>
+Queue - Current Audiobooks - 139 books - 1815H 17M / 75D 15H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
+Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -900,22 +899,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2306H 12M / 96D 2H 12M<br>
+170 queued items: 2299H 5M / 95D 19H 5M<br>
 0 reserve titles are marked as high priority<br>
-20.45% of reserve items are queued<br>
+20.36% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 836 titles - 10182H 43M / 424D 6H 43M<br>
-Average completed per year: 46.3 titles - 508H 11M / 21D 4H 11M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
+Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
+Average completed per year: 46.4 titles - 508H 59M / 21D 4H 59M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:02.159 (2.159 seconds)<br>
-Total time including file writes: 00:00:02..16 (2.16 seconds)
+Total time to process all reports: 00:00:02.913 (2.913 seconds)<br>
+Total time including file writes: 00:00:02.913 (2.913 seconds)
 </div>
 </body>
 </html>
