--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 11/23/2021 06:00<br>
+Reserved books sorted by name - 11/23/2021 10:00<br>
 -----------------------------------------------------<br>
  <br>
-836 books<br>
+835 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -753,7 +753,6 @@ Themis Files 1 - Sleeping Giants - Sylvain Neuvel - 8H 31M (Book Reserve - Audio
 Themis Files 2 - Waking Gods - Sylvain Neuvel - 9H 5M (Book Reserve - Audiobooks)<br>
 Themis Files 3 - Only Human - Sylvain Neuvel - 8H 46M (Book Reserve - Audiobooks)<br>
 They Can't Kill Us All - Wesley Lowery - 8H 12M (Book Reserve - Audiobooks)<br>
-Think Like a Freak - Steven D. Levitt - 7H 7M (Queue - Current Audiobooks)<br>
 Thirteen - Richard K. Morgan - 22H 32M (Book Reserve - Audiobooks)<br>
 Thor God of Thunder Reborn vol 1 - 4H 14M (Book Reserve - Comic Trades)<br>
 Thor Vol 1 The Goddess of Thunder - 4H 4M (Book Reserve - Comic Trades)<br>
@@ -853,9 +852,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1822H 24M / 75D 22H 24M<br>
+Queue - Current Audiobooks - 139 books - 1815H 17M / 75D 15H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 79 books - 741H 20M / 30D 21H 20M<br>
+Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -874,22 +873,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2306H 12M / 96D 2H 12M<br>
+170 queued items: 2299H 5M / 95D 19H 5M<br>
 0 reserve titles are marked as high priority<br>
-20.45% of reserve items are queued<br>
+20.36% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 412 titles - 4519H 8M / 188D 7H 8M<br>
-Total remaining in queue and reserve: 836 titles - 10182H 43M / 424D 6H 43M<br>
-Average completed per year: 46.3 titles - 508H 11M / 21D 4H 11M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.5<br>
+Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
+Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
+Average completed per year: 46.4 titles - 508H 59M / 21D 4H 59M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:02.159 (2.159 seconds)<br>
-Total time including file writes: 00:00:02..16 (2.16 seconds)
+Total time to process all reports: 00:00:02.913 (2.913 seconds)<br>
+Total time including file writes: 00:00:02.913 (2.913 seconds)
 </div>
 </body>
 </html>
