book and media report content update Wed 11/24/2021

--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 11/23/2021 10:00<br>
+All books sorted by name - 11/24/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 1248 books<br>
@@ -931,7 +931,7 @@ The City & The City - China Mieville - 10H 17M (Completed in 2019)<br>
 The City We Became - N. K. Jemisin - 16H 16M (Book Reserve - Audiobooks)<br>
 The City and the Stars - Arthur C Clark - 17H 18M (Book Reserve - Audiobooks (Need new source))<br>
 The Clockwork Dynasty - Daniel H. Wilson - 10H 48M (Book Reserve - Audiobooks)<br>
-The Code Breaker - Walter Isaacson - 16H 9M (Book Reserve - Audiobooks)<br>
+The Code Breaker - Jennifer Doudna, Gene Editing, and the Future of the Human Race - Walter Isaacson - 16H 9M (Queue - Current Audiobooks)<br>
 The Colour Out of Space - H. P. Lovecraft - 2H 41M (Completed in 2019)<br>
 The Dark Knight Returns - 6H 58M (Book Reserve - Comic Trades)<br>
 The Dark Tower I - The Gunslinger - 7H 22M (Completed in 2015)<br>
@@ -1265,7 +1265,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 139 books - 1815H 17M / 75D 15H 17M<br>
+Queue - Current Audiobooks - 140 books - 1831H 27M / 76D 7H 27M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -1280,28 +1280,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 497 books - 6535H 48M / 272D 7H 48M<br>
+Book Reserve - Audiobooks - 496 books - 6519H 39M / 271D 15H 39M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-170 queued items: 2299H 5M / 95D 19H 5M<br>
+171 queued items: 2315H 15M / 96D 11H 15M<br>
 0 reserve titles are marked as high priority<br>
-20.36% of reserve items are queued<br>
+20.48% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
-Records not found in the lookup file: 0<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
 Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
-Average completed per year: 46.4 titles - 508H 59M / 21D 4H 59M<br>
+Average completed per year: 46.4 titles - 508H 50M / 21D 4H 50M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:02.913 (2.913 seconds)<br>
-Total time including file writes: 00:00:02.913 (2.913 seconds)
+Total time to process all reports: 00:00:02..47 (2.47 seconds)<br>
+Total time including file writes: 00:00:02..47 (2.47 seconds)
 </div>
 </body>
 </html>
