--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/23/2021 10:00<br>
+Completed books sorted by folder - 11/24/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 80 books - 748H 27M / 31D 4H 27M<br>
 Total Comic Trades : 31<br>
 Average book length : 9H 21M<br>
-Hours read per week : 16H 1M<br>
-On pace to complete 89 books (835H 54M / 34D 19H 54M) by the end of 2021<br>
+Hours read per week : 15H 58M<br>
+On pace to complete 89 books (833H 22M / 34D 17H 22M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -483,7 +483,7 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 139 books - 1815H 17M / 75D 15H 17M<br>
+Queue - Current Audiobooks - 140 books - 1831H 27M / 76D 7H 27M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -498,28 +498,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 497 books - 6535H 48M / 272D 7H 48M<br>
+Book Reserve - Audiobooks - 496 books - 6519H 39M / 271D 15H 39M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-170 queued items: 2299H 5M / 95D 19H 5M<br>
+171 queued items: 2315H 15M / 96D 11H 15M<br>
 0 reserve titles are marked as high priority<br>
-20.36% of reserve items are queued<br>
+20.48% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
-Records not found in the lookup file: 0<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
 Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
-Average completed per year: 46.4 titles - 508H 59M / 21D 4H 59M<br>
+Average completed per year: 46.4 titles - 508H 50M / 21D 4H 50M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:02.913 (2.913 seconds)<br>
-Total time including file writes: 00:00:02.913 (2.913 seconds)
+Total time to process all reports: 00:00:02..47 (2.47 seconds)<br>
+Total time including file writes: 00:00:02..47 (2.47 seconds)
 </div>
 </body>
 </html>
