--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/24/2021 06:00<br>
+Completed books sorted by folder - 11/25/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 80 books - 748H 27M / 31D 4H 27M<br>
 Total Comic Trades : 31<br>
 Average book length : 9H 21M<br>
-Hours read per week : 15H 58M<br>
-On pace to complete 89 books (833H 22M / 34D 17H 22M) by the end of 2021<br>
+Hours read per week : 15H 55M<br>
+On pace to complete 88 books (830H 50M / 34D 14H 50M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -509,17 +509,17 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
 20.48% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
 Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
-Average completed per year: 46.4 titles - 508H 50M / 21D 4H 50M<br>
+Average completed per year: 46.4 titles - 508H 40M / 21D 4H 40M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:02..47 (2.47 seconds)<br>
-Total time including file writes: 00:00:02..47 (2.47 seconds)
+Total time to process all reports: 00:00:01.648 (1.648 seconds)<br>
+Total time including file writes: 00:00:01.648 (1.648 seconds)
 </div>
 </body>
 </html>
