book and media report content update Mon 11/29/2021

--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 11/29/2021 06:00<br>
+Completed books sorted by length - 11/29/2021 09:45<br>
 -----------------------------------------------------<br>
  <br>
-413 books<br>
+415 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -371,6 +371,7 @@ Capital in the Twenty-First Century - Thomas Piketty - 24H 58M (Completed in 201
 Warbreaker - Brandon Sanderson - 25H 18M (Completed in 2019)<br>
 Ender 06 - Shadow of the Hegemon - 25H 39M (Completed in 2013)<br>
 The Dark Tower V - Wolves of the Calla - 25H 57M (Completed in 2017)<br>
+The Wheel of Time 02 - The Great Hunt - 26H 35M (Completed in 2021)<br>
 First Law 3 - Last Argument of Kings - Joe Abercrombie - 27H 11M (Completed in 2018)<br>
 Mistborn 3 - The Hero of Ages - Brandon Sanderson - 27H 23M (Completed in 2020)<br>
 Shannara 01 The Sword of Shannara - Annotated (The Original Shannara Trilogy #1) - 27H 37M (Completed in 2016)<br>
@@ -380,6 +381,7 @@ Elantris 1 - Elantris - Brandon Sanderson - 28H 37M (Completed in 2020)<br>
 The Dark Tower VII - The Dark Tower - 29H 0M (Completed in 2018)<br>
 Mistborn 2 - The Well of Ascension - Brandon Sanderson - 29H 4M (Completed in 2020)<br>
 The Wheel of Time 01 - The Eye of the World - 29H 59M (Completed in 2021)<br>
+Sandman Omnibus vol 1 - 32H 22M (Completed in 2021)<br>
 The Once and Future King - T. H. White - 33H 0M (Completed in 2020)<br>
 A Song of Ice and Fire 1 - A Game of Thrones - 33H 56M (Completed in 2014)<br>
 A Song of Ice and Fire 4 - A Feast for Crows - 34H 0M (Completed in 2015)<br>
@@ -400,9 +402,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1831H 27M / 76D 7H 27M<br>
+Queue - Current Audiobooks - 139 books - 1804H 51M / 75D 4H 51M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
+Completed in 2021 - 82 books - 807H 24M / 33D 15H 24M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -413,7 +415,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
+Book Reserve - Comic Trades - 127 books - 756H 32M / 31D 12H 32M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 496 books - 6519H 39M / 271D 15H 39M<br>
  <br>
@@ -421,22 +423,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2315H 15M / 96D 11H 15M<br>
+170 queued items: 2288H 39M / 95D 8H 39M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.41% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
-Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
-Average completed per year: 46.4 titles - 508H 3M / 21D 4H 3M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
+Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
+Average completed per year: 46.6 titles - 514H 40M / 21D 10H 40M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01..65 (1.65 seconds)<br>
-Total time including file writes: 00:00:01..65 (1.65 seconds)
+Total time to process all reports: 00:00:02.925 (2.925 seconds)<br>
+Total time including file writes: 00:00:02.926 (2.926 seconds)
 </div>
 </body>
 </html>
