--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 11/29/2021 06:00<br>
+Reserved books sorted by folder - 11/29/2021 09:45<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 140 books - 1831H 27M / 76D 7H 27M<br>
+Queue - Current Audiobooks : 139 books - 1804H 51M / 75D 4H 51M<br>
  <br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
 13 Things Mentally Strong People Don't Do - Amy Morin - 6H 37M<br>
@@ -127,7 +127,6 @@ The Stuff of Thought - Steven Pinker - 9H 37M<br>
 The Uninhabitable Earth - David Wallace-Wells - 9H 2M<br>
 The Unthinkable - Amanda Ripley - 9H 37M<br>
 The Wake-Up Call - John Micklethwait - 4H 29M<br>
-The Wheel of Time 02 - The Great Hunt - 26H 35M<br>
 The Wheel of Time 03 - The Dragon Reborn - 24H 48M<br>
 The Wheel of Time 04 - The Shadow Rising - 41H 25M<br>
 The World Is Flat - A Brief History of the Twenty-first Century - Thomas L. Friedman - 27H 22M<br>
@@ -214,8 +213,8 @@ Total Comic Trades : 1<br>
 Star Wars The High Republic Edge of Balance, Vol. 1 - 4H 28M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 128 books - 788H 54M / 32D 20H 54M<br>
-Total Comic Trades : 128<br>
+Book Reserve - Comic Trades : 127 books - 756H 32M / 31D 12H 32M<br>
+Total Comic Trades : 127<br>
  <br>
 Action Comics 1000 - 4H 58M<br>
 Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
@@ -302,7 +301,6 @@ Saga vol 3 - 4H 28M<br>
 Saga vol 4 - 4H 28M<br>
 Saga vol 5 - 4H 43M<br>
 Saga vol 6 - 4H 43M<br>
-Sandman Omnibus vol 1 - 32H 22M<br>
 Spawn Origins Volume 1 - 4H 58M<br>
 Spawn Origins Volume 2 - 5H 43M<br>
 Spider-geddon - 6H 13M<br>
@@ -878,9 +876,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1831H 27M / 76D 7H 27M<br>
+Queue - Current Audiobooks - 139 books - 1804H 51M / 75D 4H 51M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
+Completed in 2021 - 82 books - 807H 24M / 33D 15H 24M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -891,7 +889,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
+Book Reserve - Comic Trades - 127 books - 756H 32M / 31D 12H 32M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 496 books - 6519H 39M / 271D 15H 39M<br>
  <br>
@@ -899,22 +897,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2315H 15M / 96D 11H 15M<br>
+170 queued items: 2288H 39M / 95D 8H 39M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.41% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
-Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
-Average completed per year: 46.4 titles - 508H 3M / 21D 4H 3M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
+Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
+Average completed per year: 46.6 titles - 514H 40M / 21D 10H 40M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01..65 (1.65 seconds)<br>
-Total time including file writes: 00:00:01..65 (1.65 seconds)
+Total time to process all reports: 00:00:02.925 (2.925 seconds)<br>
+Total time including file writes: 00:00:02.926 (2.926 seconds)
 </div>
 </body>
 </html>
