--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -87,6 +87,8 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1568465124l/43618654.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1309552288l/91475.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1395610974l/17331349.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1437870280l/233649._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1380716035l/17137673.jpg" width="300" >
 </div>
 </body>
 </html>
