--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 11/29/2021 06:00<br>
+Completed books sorted by folder - 11/29/2021 09:45<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 80 books - 748H 27M / 31D 4H 27M<br>
-Total Comic Trades : 31<br>
-Average book length : 9H 21M<br>
-Hours read per week : 15H 43M<br>
-On pace to complete 87 books (820H 53M / 34D 4H 53M) by the end of 2021<br>
+Completed in 2021 : 82 books - 807H 24M / 33D 15H 24M<br>
+Total Comic Trades : 32<br>
+Average book length : 9H 50M<br>
+Hours read per week : 16H 58M<br>
+On pace to complete 89 books (885H 31M / 36D 21H 31M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -67,6 +67,7 @@ Outliers - Malcolm Gladwell - 7H 19M<br>
 Raising Good Humans - Hunter Clarke-Fields - 5H 38M<br>
 Rationality - Steven Pinker - 11H 22M<br>
 Rick and Morty Dungeons and Dragons - 4H 28M<br>
+Sandman Omnibus vol 1 - 32H 22M<br>
 Scarlet Witch Vol. 1 Witches' Road - 3H 29M<br>
 Silver Surfer Black - 3H 44M<br>
 Spider-Ham Aporkalypse Now - 3H 29M<br>
@@ -90,6 +91,7 @@ The Signal and the Noise - Nate Silver - 15H 47M<br>
 The Teenage Brain - A Neuroscientist's Survival Guide to Raising Adolescents and Young Adults - Frances E. Jensen - 9H 4M<br>
 The Tipping Point - Malcolm Gladwell - 8H 36M<br>
 The Wheel of Time 01 - The Eye of the World - 29H 59M<br>
+The Wheel of Time 02 - The Great Hunt - 26H 35M<br>
 Think Like a Freak - Steven D. Levitt - 7H 7M<br>
 Venomverse - 3H 59M<br>
 VocabuLearn German Complete - 9H 2M<br>
@@ -483,9 +485,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1831H 27M / 76D 7H 27M<br>
+Queue - Current Audiobooks - 139 books - 1804H 51M / 75D 4H 51M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
+Completed in 2021 - 82 books - 807H 24M / 33D 15H 24M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -496,7 +498,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
+Book Reserve - Comic Trades - 127 books - 756H 32M / 31D 12H 32M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 496 books - 6519H 39M / 271D 15H 39M<br>
  <br>
@@ -504,22 +506,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2315H 15M / 96D 11H 15M<br>
+170 queued items: 2288H 39M / 95D 8H 39M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.41% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
-Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
-Average completed per year: 46.4 titles - 508H 3M / 21D 4H 3M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
+Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
+Average completed per year: 46.6 titles - 514H 40M / 21D 10H 40M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01..65 (1.65 seconds)<br>
-Total time including file writes: 00:00:01..65 (1.65 seconds)
+Total time to process all reports: 00:00:02.925 (2.925 seconds)<br>
+Total time including file writes: 00:00:02.926 (2.926 seconds)
 </div>
 </body>
 </html>
