--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 11/29/2021 06:00<br>
+Reserved books sorted by name - 11/29/2021 09:45<br>
 -----------------------------------------------------<br>
  <br>
-835 books<br>
+833 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -491,7 +491,6 @@ Saga vol 5 - 4H 43M (Book Reserve - Comic Trades)<br>
 Saga vol 6 - 4H 43M (Book Reserve - Comic Trades)<br>
 Salem's Lot - Stephen King - 17H 40M (Book Reserve - Audiobooks)<br>
 Salt, Fat, Acid, Heat - Samin Nosrat - 5H 58M (Book Reserve - Audiobooks)<br>
-Sandman Omnibus vol 1 - 32H 22M (Book Reserve - Comic Trades)<br>
 Sci-Phi Science Fiction as Philosophy - The Great Courses - 13H 31M (Queue - Audible Audiobooks)<br>
 Science in the Soul - Richard Dawkins - 14H 44M (Book Reserve - Audiobooks)<br>
 Scythe 1 - Scythe - Neal Shusterman - 10H 32M (Queue - Audible Audiobooks)<br>
@@ -730,7 +729,6 @@ The War of the Worlds - H. G. Wells - 5H 56M (Book Reserve - Audiobooks)<br>
 The War on Normal People - Andrew Yang - 6H 56M (Book Reserve - Audiobooks)<br>
 The Weatherman Volume 1 - 6H 13M (Book Reserve - Comic Trades)<br>
 The Wheel of Time 00 - New Spring - 12H 41M (Book Reserve - Audiobooks)<br>
-The Wheel of Time 02 - The Great Hunt - 26H 35M (Queue - Current Audiobooks)<br>
 The Wheel of Time 03 - The Dragon Reborn - 24H 48M (Queue - Current Audiobooks)<br>
 The Wheel of Time 04 - The Shadow Rising - 41H 25M (Queue - Current Audiobooks)<br>
 The Wheel of Time 05 - The Fires of Heaven - 36H 29M (Book Reserve - Audiobooks)<br>
@@ -852,9 +850,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1831H 27M / 76D 7H 27M<br>
+Queue - Current Audiobooks - 139 books - 1804H 51M / 75D 4H 51M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 80 books - 748H 27M / 31D 4H 27M<br>
+Completed in 2021 - 82 books - 807H 24M / 33D 15H 24M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -865,7 +863,7 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
-Book Reserve - Comic Trades - 128 books - 788H 54M / 32D 20H 54M<br>
+Book Reserve - Comic Trades - 127 books - 756H 32M / 31D 12H 32M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 496 books - 6519H 39M / 271D 15H 39M<br>
  <br>
@@ -873,22 +871,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2315H 15M / 96D 11H 15M<br>
+170 queued items: 2288H 39M / 95D 8H 39M<br>
 0 reserve titles are marked as high priority<br>
-20.48% of reserve items are queued<br>
+20.41% of reserve items are queued<br>
  <br>
 All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 413 titles - 4526H 15M / 188D 14H 15M<br>
-Total remaining in queue and reserve: 835 titles - 10175H 36M / 423D 23H 36M<br>
-Average completed per year: 46.4 titles - 508H 3M / 21D 4H 3M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
+Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
+Average completed per year: 46.6 titles - 514H 40M / 21D 10H 40M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01..65 (1.65 seconds)<br>
-Total time including file writes: 00:00:01..65 (1.65 seconds)
+Total time to process all reports: 00:00:02.925 (2.925 seconds)<br>
+Total time including file writes: 00:00:02.926 (2.926 seconds)
 </div>
 </body>
 </html>
