book and media report content update Wed 12/01/2021

--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 11/30/2021 06:00<br>
+Completed books sorted by name - 12/01/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 415 books<br>
@@ -463,12 +463,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
 Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
-Average completed per year: 46.6 titles - 514H 30M / 21D 10H 30M<br>
+Average completed per year: 46.6 titles - 514H 21M / 21D 10H 21M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01.654 (1.654 seconds)<br>
-Total time including file writes: 00:00:01.654 (1.654 seconds)
+Total time to process all reports: 00:00:01..66 (1.66 seconds)<br>
+Total time including file writes: 00:00:01.661 (1.661 seconds)
 </div>
 </body>
 </html>
