book and media report content update Thu 12/02/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 12/01/2021 06:00<br>
+Completed books sorted by folder - 12/02/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 82 books - 807H 24M / 33D 15H 24M<br>
 Total Comic Trades : 32<br>
 Average book length : 9H 50M<br>
-Hours read per week : 16H 52M<br>
-On pace to complete 89 books (880H 15M / 36D 16H 15M) by the end of 2021<br>
+Hours read per week : 16H 49M<br>
+On pace to complete 89 books (877H 36M / 36D 13H 36M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -516,12 +516,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
 Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
-Average completed per year: 46.6 titles - 514H 21M / 21D 10H 21M<br>
+Average completed per year: 46.5 titles - 514H 12M / 21D 10H 12M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01..66 (1.66 seconds)<br>
-Total time including file writes: 00:00:01.661 (1.661 seconds)
+Total time to process all reports: 00:00:02.059 (2.059 seconds)<br>
+Total time including file writes: 00:00:02.059 (2.059 seconds)
 </div>
 </body>
 </html>
