--- a/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
+++ b/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
@@ -7,138 +7,138 @@
 </head>
 <body>
 <div class="content">
-A randomized list of reserved comic book trade titles - 12/01/2021 06:00<br>
+A randomized list of reserved comic book trade titles - 12/02/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 127 books<br>
  <br>
-Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
-Iron Man 2020 Robot Revolution - 4H 14M<br>
-Spider-gwen vol 3 - 3H 29M<br>
-Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
-Superman vol 4 - 5H 28M<br>
-Invincible Iron Man vol 1 - 4H 14M<br>
-Future State Wonder Woman - 6H 13M<br>
-Infamous Iron Man vol 2 - 4H 14M<br>
-Thanos vol 1 - 4H 14M<br>
-Batman Eternal vol 2 - 13H 56M<br>
-Civil War II - 9H 12M<br>
-Darth Vader vol 3 - 3H 59M<br>
-Red Hood and the Outlaws vol 1 - 5H 13M<br>
-Batman Arkham Asylum - 7H 13M<br>
-Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
-Edge of Spider-geddon - 3H 44M<br>
-Uncanny X-force vol 1 - 16H 11M<br>
-Mister Miracle - 9H 57M<br>
-Justice League Darkseid War - 11H 42M<br>
-Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
-X-men Gold vol 1 - 4H 28M<br>
-Batman Li'l Gotham Vol. 1 - 8H 28M<br>
-Superior Spider-man Necessary Evil - 3H 36M<br>
-Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
-Guardians of the galaxy vol 1 - 9H 12M<br>
-Saga vol 6 - 4H 43M<br>
-Batman The Doom That Came To Gotham - 5H 28M<br>
-Moon Knight Vol. 1 The Midnight Mission - 4H 28M<br>
-Death of Doctor Strange - 4H 14M<br>
-Batman Eternal vol 1 - 14H 56M<br>
-Deadpool v Gambit - 3H 29M<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
-Deadpool Classic Killogy - 8H 43M<br>
-Action Comics 1000 - 4H 58M<br>
-Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
-Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
-Suicide Squad vol 5 - 6H 28M<br>
-Lobo Portrait of a Bastich - 6H 28M<br>
-Black Panther vol 2 - 4H 28M<br>
-Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
-Green Lanterns vol 2 - 6H 28M<br>
-Batman 66 vol 3 - 5H 13M<br>
-Super Sons vol 1 - 3H 59M<br>
-Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
-We Only Find Them When They're Dead Vol. 2 - 4H 28M<br>
-Spider-man Spider Island - 11H 42M<br>
-Spider-man Big Time vol 1 - 16H 11M<br>
-Superman Red & Blue - 8H 28M<br>
-Superman vol 3 - 4H 28M<br>
-Darth Vader vol 4 - 5H 13M<br>
-Deadpool Dracula's Gauntlet - 6H 13M<br>
-Marvel Action Captain Marvel Ghost in the Machine - 3H 44M<br>
-Detective Comics 1000 - 5H 28M<br>
-Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
-Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
-Iron Man Extremis - 4H 58M<br>
-Black Panther vol 1 - 4H 28M<br>
-Spider-Verse - 20H 10M<br>
-Lumberjanes - 4H 6M<br>
-Atomic Robo Crystals are Integral - 13H 4M<br>
-Atomic Robo Everything Explodes - 11H 57M<br>
-Daredevil by Waid Rivera Vol. 1 - 4H 43M<br>
-Deadpool too soon - 4H 14M<br>
-Transformers All Hail Megatron Volume 2 - 4H 43M<br>
-The Weatherman Volume 1 - 6H 13M<br>
-How to Fall Forever (Black Science) - 4H 43M<br>
-Batman '89 - 4H 43M<br>
-Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
-Spawn Origins Volume 2 - 5H 43M<br>
-Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
-White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
-Teen Titans by Geoff Johns Book One - 11H 27M<br>
-Saga vol 5 - 4H 43M<br>
-Umbrella Academy vol 1 - 5H 43M<br>
-Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
-Avengers vol 1 - 4H 58M<br>
-Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
-Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
-Uncanny X-force vol 2 - 12H 42M<br>
-Despicable Deadpool vol 3 - 3H 29M<br>
-Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
-Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
-Despicable Deadpool vol 2 - 3H 29M<br>
-Spider-geddon - 6H 13M<br>
-Batman vol 8 - 5H 28M<br>
-Green Lanterns vol 4 - 3H 59M<br>
-Fantastic Four vol 1 - 4H 28M<br>
-Batman vol 9 - 4H 43M<br>
-Amazing Spider-Man Venom Inc - 4H 58M<br>
-Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
-Saga vol 4 - 4H 28M<br>
-Superman '78 - 4H 43M<br>
-Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
-Astonishing Spider-man & Wolverine - 5H 13M<br>
-Star Wars War of the Bounty Hunters - 4H 58M<br>
-Batman Knightfall Vol. 1 - 8H 43M<br>
-DCeased - 6H 58M<br>
-Spider-man-Deadpool vol 3 - 4H 14M<br>
-Marvel Infinity - 18H 25M<br>
-Batman Last Knight on Earth - 5H 43M<br>
-Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
-Spider-man-Deadpool vol 2 - 3H 44M<br>
 Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
-Spawn Origins Volume 1 - 4H 58M<br>
-Pride of Baghdad - 4H 14M<br>
-Carnage vol 2 World Tour - 3H 29M<br>
-Batman 66 vol 2 - 5H 28M<br>
-Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
-Green Lanterns vol 3 - 5H 13M<br>
-Saga vol 3 - 4H 28M<br>
-Suicide Squad vol 4 - 4H 28M<br>
-The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
-Deadpool v Carnage - 3H 44M<br>
-Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
-War Machine - Volume 1 Iron Heart - 4H 14M<br>
-Spider-gwen vol 2 - 3H 29M<br>
-Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Umbrella Academy vol 2 - 5H 58M<br>
-Once & Future Vol. 1 - 4H 58M<br>
-East of West Volume 1 The Promise - 2H 59M<br>
-Transformers All Hail Megatron Volume 1 - 4H 43M<br>
-Swamp Thing Bronze Age vol 1 - 9H 27M<br>
-The Dark Knight Returns - 6H 58M<br>
-Batman Damned - 5H 28M<br>
-Batwoman vol 1 - 5H 13M<br>
-Thor God of Thunder Reborn vol 1 - 4H 14M<br>
+Moon Knight Vol. 1 The Midnight Mission - 4H 28M<br>
+Batman 66 vol 3 - 5H 13M<br>
 Beta Ray Bill Argent Star - 3H 59M<br>
+How to Fall Forever (Black Science) - 4H 43M<br>
+Spawn Origins Volume 2 - 5H 43M<br>
+Darth Vader vol 3 - 3H 59M<br>
+Batman Eternal vol 2 - 13H 56M<br>
+Batman Last Knight on Earth - 5H 43M<br>
+Spider-gwen vol 3 - 3H 29M<br>
+Batman Eternal vol 1 - 14H 56M<br>
+Green Lanterns vol 3 - 5H 13M<br>
+Despicable Deadpool vol 3 - 3H 29M<br>
+Amazing Spider-Man Venom Inc - 4H 58M<br>
+Saga vol 4 - 4H 28M<br>
+Carnage vol 2 World Tour - 3H 29M<br>
+Superman vol 4 - 5H 28M<br>
+Lumberjanes - 4H 6M<br>
+White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
+Saga vol 6 - 4H 43M<br>
+Super Sons vol 1 - 3H 59M<br>
+Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
+Iron Man 2020 Robot Revolution - 4H 14M<br>
+Atomic Robo Crystals are Integral - 13H 4M<br>
+Avengers vol 1 - 4H 58M<br>
+Saga vol 3 - 4H 28M<br>
+Red Hood and the Outlaws vol 1 - 5H 13M<br>
+Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
+Umbrella Academy vol 1 - 5H 43M<br>
+Superior Spider-man Necessary Evil - 3H 36M<br>
+Pride of Baghdad - 4H 14M<br>
+Fantastic Four vol 1 - 4H 28M<br>
+Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
+Spider-geddon - 6H 13M<br>
+Green Lanterns vol 2 - 6H 28M<br>
+Uncanny X-force vol 1 - 16H 11M<br>
+Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
+Deadpool too soon - 4H 14M<br>
+Batman 66 vol 2 - 5H 28M<br>
+Star Wars War of the Bounty Hunters - 4H 58M<br>
+We Only Find Them When They're Dead Vol. 2 - 4H 28M<br>
+East of West Volume 1 The Promise - 2H 59M<br>
+Batman '89 - 4H 43M<br>
+Future State Wonder Woman - 6H 13M<br>
+Deadpool Classic Killogy - 8H 43M<br>
+Despicable Deadpool vol 2 - 3H 29M<br>
+Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
+Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
+Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
+Mister Miracle - 9H 57M<br>
+Spider-Verse - 20H 10M<br>
+Action Comics 1000 - 4H 58M<br>
+Batman Li'l Gotham Vol. 1 - 8H 28M<br>
+Batwoman vol 1 - 5H 13M<br>
+Batman Arkham Asylum - 7H 13M<br>
+Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
+Black Panther vol 1 - 4H 28M<br>
+Guardians of the galaxy vol 1 - 9H 12M<br>
+Lobo Portrait of a Bastich - 6H 28M<br>
+Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
+Daredevil by Waid Rivera Vol. 1 - 4H 43M<br>
+Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
+Suicide Squad vol 4 - 4H 28M<br>
+X-men Gold vol 1 - 4H 28M<br>
+Spider-man-Deadpool vol 3 - 4H 14M<br>
+Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+The Weatherman Volume 1 - 6H 13M<br>
+Black Panther vol 2 - 4H 28M<br>
+Iron Man Extremis - 4H 58M<br>
+Batman Knightfall Vol. 1 - 8H 43M<br>
+Spider-man-Deadpool vol 2 - 3H 44M<br>
+Atomic Robo Everything Explodes - 11H 57M<br>
+Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
+Astonishing Spider-man & Wolverine - 5H 13M<br>
+Uncanny X-force vol 2 - 12H 42M<br>
+Deadpool Dracula's Gauntlet - 6H 13M<br>
+Marvel Infinity - 18H 25M<br>
+Justice League Darkseid War - 11H 42M<br>
+Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+Death of Doctor Strange - 4H 14M<br>
+Batman Damned - 5H 28M<br>
+War Machine - Volume 1 Iron Heart - 4H 14M<br>
+DCeased - 6H 58M<br>
+Thanos vol 1 - 4H 14M<br>
+Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
+Batman The Doom That Came To Gotham - 5H 28M<br>
+Batman vol 8 - 5H 28M<br>
+Transformers All Hail Megatron Volume 1 - 4H 43M<br>
+Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
+Deadpool v Carnage - 3H 44M<br>
+Swamp Thing Bronze Age vol 1 - 9H 27M<br>
+Suicide Squad vol 5 - 6H 28M<br>
+Once & Future Vol. 1 - 4H 58M<br>
+Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
+Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
+Superman Red & Blue - 8H 28M<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
+Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
+Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
+Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
+Spawn Origins Volume 1 - 4H 58M<br>
+Darth Vader vol 4 - 5H 13M<br>
+Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
+Transformers All Hail Megatron Volume 2 - 4H 43M<br>
+Saga vol 5 - 4H 43M<br>
+Edge of Spider-geddon - 3H 44M<br>
+Batman vol 9 - 4H 43M<br>
+Green Lanterns vol 4 - 3H 59M<br>
+Teen Titans by Geoff Johns Book One - 11H 27M<br>
+Spider-gwen vol 2 - 3H 29M<br>
+Marvel Action Captain Marvel Ghost in the Machine - 3H 44M<br>
+Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
+Civil War II - 9H 12M<br>
+The Dark Knight Returns - 6H 58M<br>
+The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
+Spider-man Spider Island - 11H 42M<br>
+Infamous Iron Man vol 2 - 4H 14M<br>
+Superman vol 3 - 4H 28M<br>
+Umbrella Academy vol 2 - 5H 58M<br>
+Invincible Iron Man vol 1 - 4H 14M<br>
+Detective Comics 1000 - 5H 28M<br>
+Spider-man Big Time vol 1 - 16H 11M<br>
+Deadpool v Gambit - 3H 29M<br>
+Thor God of Thunder Reborn vol 1 - 4H 14M<br>
+Superman '78 - 4H 43M<br>
 -----------------------------------------------------<br>
  <br>
 Summary Report<br>
@@ -175,12 +175,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
 Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
-Average completed per year: 46.6 titles - 514H 21M / 21D 10H 21M<br>
+Average completed per year: 46.5 titles - 514H 12M / 21D 10H 12M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01..66 (1.66 seconds)<br>
-Total time including file writes: 00:00:01.661 (1.661 seconds)
+Total time to process all reports: 00:00:02.059 (2.059 seconds)<br>
+Total time including file writes: 00:00:02.059 (2.059 seconds)
 </div>
 </body>
 </html>
