book and media report content update Wed 12/08/2021

--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 12/07/2021 06:00<br>
+Reserved books sorted by folder - 12/08/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 139 books - 1804H 51M / 75D 4H 51M<br>
@@ -907,12 +907,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
 Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
-Average completed per year: 46.5 titles - 513H 24M / 21D 9H 24M<br>
+Average completed per year: 46.5 titles - 513H 15M / 21D 9H 15M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:02.417 (2.417 seconds)<br>
-Total time including file writes: 00:00:02.417 (2.417 seconds)
+Total time to process all reports: 00:00:02..41 (2.41 seconds)<br>
+Total time including file writes: 00:00:02..41 (2.41 seconds)
 </div>
 </body>
 </html>
