book and media report content update Wed 12/08/2021

--- a/report/books/book_images_by_year.html
+++ b/report/books/book_images_by_year.html
@@ -34,6 +34,10 @@
 
 <div class="title">Book Images by Year</div>
 <div id="container1">
+    <div class="button" id="button-10">
+        <div id="slide10"></div>
+        <a href="2022_book_images.html">2022</a>
+    </div>
     <div class="button" id="button-9">
         <div id="slide9"></div>
         <a href="2021_book_images.html">2021</a>
