--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 12/08/2021 06:00<br>
+Completed books sorted by folder - 12/08/2021 13:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 82 books - 807H 24M / 33D 15H 24M<br>
@@ -520,8 +520,8 @@ Average completed per year: 46.5 titles - 513H 15M / 21D 9H 15M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:02..41 (2.41 seconds)<br>
-Total time including file writes: 00:00:02..41 (2.41 seconds)
+Total time to process all reports: 00:00:03.256 (3.256 seconds)<br>
+Total time including file writes: 00:00:03.257 (3.257 seconds)
 </div>
 </body>
 </html>
