--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 12/08/2021 06:00<br>
+Reserved books sorted by length - 12/08/2021 13:00<br>
 -----------------------------------------------------<br>
  <br>
 833 books<br>
@@ -781,8 +781,8 @@ Average completed per year: 46.5 titles - 513H 15M / 21D 9H 15M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:02..41 (2.41 seconds)<br>
-Total time including file writes: 00:00:02..41 (2.41 seconds)
+Total time to process all reports: 00:00:03.256 (3.256 seconds)<br>
+Total time including file writes: 00:00:03.257 (3.257 seconds)
 </div>
 </body>
 </html>
