book and media report content update Fri 12/10/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -89,6 +89,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1395610974l/17331349.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1437870280l/233649._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1380716035l/17137673.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1600283641l/28335699._SY475_.jpg" width="300" >
 </div>
 </body>
 </html>
