--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 12/09/2021 06:00<br>
+Completed books sorted by folder - 12/10/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 82 books - 807H 24M / 33D 15H 24M<br>
-Total Comic Trades : 32<br>
-Average book length : 9H 50M<br>
-Hours read per week : 16H 28M<br>
-On pace to complete 87 books (859H 45M / 35D 19H 45M) by the end of 2021<br>
+Completed in 2021 : 83 books - 827H 4M / 34D 11H 4M<br>
+Total Comic Trades : 33<br>
+Average book length : 9H 57M<br>
+Hours read per week : 16H 49M<br>
+On pace to complete 88 books (878H 7M / 36D 14H 7M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -51,6 +51,7 @@ Edge of Venomverse - 3H 29M<br>
 Expanse 6 - Babylon's Ashes - James S. A. Corey - 20H 4M<br>
 Expanse 7 - Persepolis Rising - James S. A. Corey - 20H 34M<br>
 Expanse 8 - Tiamat's Wrath - James S. A. Corey - 19H 8M<br>
+Expanse 9 - Leviathan Falls - James S. A. Corey - 19H 40M<br>
 Expanse Novella 6.5 - Strange Dogs - James S. A. Corey - 2H 30M<br>
 Expanse Novella 7.5 - Auberon - James S. A. Corey - 2H 25M<br>
 Harley Quinn Black + White + Red - 7H 13M<br>
@@ -487,7 +488,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 139 books - 1804H 51M / 75D 4H 51M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 82 books - 807H 24M / 33D 15H 24M<br>
+Completed in 2021 - 83 books - 827H 4M / 34D 11H 4M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -510,18 +511,18 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
 0 reserve titles are marked as high priority<br>
 20.41% of reserve items are queued<br>
  <br>
-All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
+All books included in this report: 1249 titles - 14721H 32M / 613D 9H 32M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
+Total completed since 01/01/2013: 416 titles - 4604H 52M / 191D 20H 52M<br>
 Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
-Average completed per year: 46.4 titles - 513H 5M / 21D 9H 5M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Average completed per year: 46.5 titles - 515H 8M / 21D 11H 8M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:01.723 (1.723 seconds)<br>
-Total time including file writes: 00:00:01.723 (1.723 seconds)
+Total time to process all reports: 00:00:01.942 (1.942 seconds)<br>
+Total time including file writes: 00:00:01.942 (1.942 seconds)
 </div>
 </body>
 </html>
