--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 12/09/2021 06:00<br>
+Completed books sorted by name - 12/10/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-415 books<br>
+416 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -170,6 +170,7 @@ Expanse 5 - Nemesis Games - James S. A. Corey - 16H 49M (Completed in 2020)<br>
 Expanse 6 - Babylon's Ashes - James S. A. Corey - 20H 4M (Completed in 2021)<br>
 Expanse 7 - Persepolis Rising - James S. A. Corey - 20H 34M (Completed in 2021)<br>
 Expanse 8 - Tiamat's Wrath - James S. A. Corey - 19H 8M (Completed in 2021)<br>
+Expanse 9 - Leviathan Falls - James S. A. Corey - 19H 40M (Completed in 2021)<br>
 Expanse Novella 0.5 - The Churn - James S. A. Corey - 2H 30M (Completed in 2019)<br>
 Expanse Novella 2.5 - Gods of Risk - James S. A. Corey - 2H 35M (Completed in 2020)<br>
 Expanse Novella 3.5 - The Vital Abyss - James S. A. Corey - 2H 26M (Completed in 2020)<br>
@@ -434,7 +435,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 139 books - 1804H 51M / 75D 4H 51M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 82 books - 807H 24M / 33D 15H 24M<br>
+Completed in 2021 - 83 books - 827H 4M / 34D 11H 4M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -457,18 +458,18 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
 0 reserve titles are marked as high priority<br>
 20.41% of reserve items are queued<br>
  <br>
-All books included in this report: 1248 titles - 14701H 52M / 612D 13H 52M<br>
+All books included in this report: 1249 titles - 14721H 32M / 613D 9H 32M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 415 titles - 4585H 12M / 191D 1H 12M<br>
+Total completed since 01/01/2013: 416 titles - 4604H 52M / 191D 20H 52M<br>
 Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
-Average completed per year: 46.4 titles - 513H 5M / 21D 9H 5M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Average completed per year: 46.5 titles - 515H 8M / 21D 11H 8M<br>
+Remaining years of reserve material at average yearly pace: 17.9<br>
+Remaining years of reserve material at current year pace: 9.5<br>
  <br>
-Total time to process all reports: 00:00:01.723 (1.723 seconds)<br>
-Total time including file writes: 00:00:01.723 (1.723 seconds)
+Total time to process all reports: 00:00:01.942 (1.942 seconds)<br>
+Total time including file writes: 00:00:01.942 (1.942 seconds)
 </div>
 </body>
 </html>
