book and media report content update Mon 12/13/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 12/12/2021 06:00<br>
+Completed books sorted by folder - 12/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 83 books - 827H 4M / 34D 11H 4M<br>
 Total Comic Trades : 33<br>
 Average book length : 9H 57M<br>
-Hours read per week : 16H 43M<br>
-On pace to complete 87 books (873H 2M / 36D 9H 2M) by the end of 2021<br>
+Hours read per week : 16H 41M<br>
+On pace to complete 87 books (870H 30M / 36D 6H 30M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -517,12 +517,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 416 titles - 4604H 52M / 191D 20H 52M<br>
 Total remaining in queue and reserve: 833 titles - 10116H 39M / 421D 12H 39M<br>
-Average completed per year: 46.5 titles - 514H 49M / 21D 10H 49M<br>
+Average completed per year: 46.5 titles - 514H 40M / 21D 10H 40M<br>
 Remaining years of reserve material at average yearly pace: 17.9<br>
 Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:02.354 (2.354 seconds)<br>
-Total time including file writes: 00:00:02.355 (2.355 seconds)
+Total time to process all reports: 00:00:02..34 (2.34 seconds)<br>
+Total time including file writes: 00:00:02.341 (2.341 seconds)
 </div>
 </body>
 </html>
