book and media report content update Wed 12/21/2022

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>VemomousPrimate</title>
 </head>
 <body>
-<div class="content"><img src="SlowLorisGreen.png"></div>
+<div class="content"><img src="vp.png"></div>
 </body>
 </html>
