book and media report content update Thu 02/02/2023

--- a/landing.html
+++ b/landing.html
@@ -51,5 +51,16 @@
     </div>
 </div>
 
+<div id="container3">
+    <div class="button" id="button-5">
+        <div id="slide5"></div>
+        <a href="avatar">Avatars</a>
+    </div>
+    <div class="button" id="button-6">
+        <div id="slide6"></div>
+        <a href="report/psplus">PS Plus</a>
+    </div>
+</div>
+
 </body>
 </html>
