Add sweetwater links to landing page

--- a/landing.html
+++ b/landing.html
@@ -62,5 +62,18 @@
     </div>
 </div>
 
+<div id="container4">
+    <div class="button" id="button-7">
+        <div id="slide7"></div>
+        <!--Sweetwater newest hardtail right handed solidbody guitars under 1000-->
+        <a href="https://www.sweetwater.com/c590--Right-handed_Solidbody_Guitars?all&sb=newest&params=eyJyYW5nZSI6eyJQcmljZSBSYW5nZSI6eyJsb3dlciI6IiIsInVwcGVyIjoiMTAwMCJ9fSwiZmFjZXQiOnsiTnVtYmVyIG9mIFN0cmluZ3MiOls3LCI2Il0sIkJyaWRnZS9UYWlscGllY2UiOlsiRml4ZWQiXX19">New Guitars</a>
+    </div>
+    <div class="button" id="button-8">
+        <div id="slide8"></div>
+        <!--Sweetwater newest right handed basses under 1000-->
+        <a href="https://www.sweetwater.com/c580--Bass_Guitars?all&sb=newest&params=eyJmYWNldCI6eyJMZWZ0LS9SaWdodC1oYW5kZWQiOlsiUmlnaHQiXX0sInJhbmdlIjp7IlByaWNlIFJhbmdlIjp7Imxvd2VyIjoiIiwidXBwZXIiOiIxMDAwIn19fQ">New Basses</a>
+    </div>
+</div>
+
 </body>
 </html>
