book and media report content update Sun 07/16/2023

--- a/games/index.html
+++ b/games/index.html
@@ -23,63 +23,53 @@
             text-decoration: underline;
         }
     </style>
-    <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
-    <title>Landing Page</title>
+    <title>Games</title>
 </head>
 <body>
 
 <div id="container1">
     <div class="button" id="button-1">
         <div id="slide1"></div>
-        <a href="report/books">Book Report</a>
+        <a href="https://worldle.teuteuf.fr/">🌍WORLDLE🌍</a>
     </div>
     <div class="button" id="button-2">
         <div id="slide2"></div>
-        <a href="https://bcplinfo.overdrive.com/search/title?addedDate=days-0-7&mediaType=audiobook&sortBy=newlyadded">BCPL New Audiobooks</a>
+        <a href="https://www.nytimes.com/games/connections">CONNECTIONS</a>
     </div>
 </div>
 
 <div id="container2">
     <div class="button" id="button-3">
         <div id="slide3"></div>
-        <a href="report/media">Jason's Media</a>
-    </div>
-    <div class="button" id="button-4">
-        <div id="slide4"></div>
-        <a href="report/media/k_progress.html">Kerrigan's Media</a>
+        <a href="https://www.nytimes.com/games/wordle/index.html">WORDLE</a>
     </div>
 </div>
 
 <div id="container3">
     <div class="button" id="button-5">
         <div id="slide5"></div>
-        <a href="avatar">Avatars</a>
+        <a href="https://www.merriam-webster.com/games/quordle/#/">QUORDLE DAILY</a>
     </div>
     <div class="button" id="button-6">
         <div id="slide6"></div>
-        <a href="report/psplus">PS Plus</a>
+        <a href="https://www.merriam-webster.com/games/quordle/#/sequence?overlay=sequence-modal-welcome">QUORDLE SEQUENCE</a>
     </div>
 </div>
 
 <div id="container4">
     <div class="button" id="button-7">
         <div id="slide7"></div>
-        <!--Sweetwater newest hardtail right handed solidbody guitars under 1500-->
-        <a href="https://www.sweetwater.com/c590--Right-handed_Solidbody_Guitars?all&sb=newest&params=eyJmYWNldCI6eyJOdW1iZXIgb2YgU3RyaW5ncyI6WzcsIjYiXSwiQnJpZGdlL1RhaWxwaWVjZSI6WyJGaXhlZCJdfSwicmFuZ2UiOnsiUHJpY2UgUmFuZ2UiOnsibG93ZXIiOiIiLCJ1cHBlciI6IjE1MDAifX19">New Guitars</a>
+        <a href="https://www.britannica.com/games/octordle/daily">OCTORDLE DAILY</a>
     </div>
     <div class="button" id="button-8">
         <div id="slide8"></div>
-        <!--Sweetwater newest right handed basses under 1500-->
-        <a href="https://www.sweetwater.com/c580--Bass_Guitars?all&sb=newest&params=eyJmYWNldCI6eyJMZWZ0LS9SaWdodC1oYW5kZWQiOlsiUmlnaHQiXX0sInJhbmdlIjp7IlByaWNlIFJhbmdlIjp7Imxvd2VyIjoiIiwidXBwZXIiOiIxNTAwIn19fQ">New Basses</a>
+        <a href="https://www.britannica.com/games/octordle/daily-sequence">OCTORDLE SEQUENCE</a>
     </div>
 </div>
 
 <div id="container5">
-    <div class="button" id="button-9">
-        <div id="slide9"></div>
-        <a href="games">Games</a>
-    </div>
 </div>
 
 </body>
