book and media report content update Tue 07/25/2023

--- a/landing.html
+++ b/landing.html
@@ -80,6 +80,10 @@
         <div id="slide9"></div>
         <a href="games">Games</a>
     </div>
+    <div class="button" id="button-10">
+        <div id="slide10"></div>
+        <a href="altitude">Games</a>
+    </div>
 </div>
 
 </body>
