book and media report content update Thu 10/12/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -16,6 +16,8 @@
     <img src="Monkey8.png" width="300" >
     <img src="vp.png" width="300" >
     <img src="SlowLorisGreen.png" width="300" >
+    <img src="monk1.jpg" width="300" >
+    <img src="venomousprimate.jpg" width="300" >
 </div>
 </body>
 </html>
