book and media report content update Thu 10/12/2023

--- a/report/books/book_images_by_year.html
+++ b/report/books/book_images_by_year.html
@@ -34,6 +34,10 @@
 
 <div class="title">Book Images by Year</div>
 <div id="container6">
+    <div class="button" id="button-12">
+        <div id="slide12"></div>
+        <a href="2024_book_images.html">2023</a>
+    </div>
     <div class="button" id="button-11">
         <div id="slide11"></div>
         <a href="2023_book_images.html">2023</a>
