book and media report content update Mon 10/16/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 <div class="content">
-    <img src="jedi.jpg" width="300" >
     <img src="yoda_high_school.jpg" width="300" >
+    <img src="yhs1.jpg" width="300" >
+    <img src="yhs2.jpg" width="300" >
+    <img src="jedi.jpg" width="300" >
     <img src="SirPoisonous.jpg" width="300" >
     <img src="VenomousPrimate_Rajang_Icon.png" width="300" >
     <img src="Monkey3.png" width="300" >
@@ -18,6 +20,9 @@
     <img src="SlowLorisGreen.png" width="300" >
     <img src="monk1.jpg" width="300" >
     <img src="venomousprimate.jpg" width="300" >
+    <img src="pmr1.jpg" width="300" >
+    <img src="pmr2.jpg" width="300" >
+    <img src="pmr3.jpg" width="300" >
 </div>
 </body>
 </html>
