book and media report content update Fri 10/27/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -11,6 +11,7 @@
     <img src="yhs1.jpg" width="300" >
     <img src="yhs2.jpg" width="300" >
     <img src="vadervp1.jpg" width="300" >
+    <img src="vadervp2.jpg" width="300" >
     <img src="jedi.jpg" width="300" >
     <img src="SirPoisonous.jpg" width="300" >
     <img src="VenomousPrimate_Rajang_Icon.png" width="300" >
