book and media report content update Tue 11/07/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -6,27 +6,38 @@
     <title>Avatars</title>
 </head>
 <body>
+<div class="title">General</div>
 <div class="content">
-    <img src="yoda_high_school.jpg" width="300" >
-    <img src="yhs1.jpg" width="300" >
-    <img src="yhs2.jpg" width="300" >
-    <img src="vadervp1.jpg" width="300" >
-    <img src="vadervp2.jpg" width="300" >
-    <img src="chewyvp1.jpg" width="300" >
-    <img src="chewysoup.jpg" width="300" >
-    <img src="jedi.jpg" width="300" >
-    <img src="SirPoisonous.jpg" width="300" >
-    <img src="VenomousPrimate_Rajang_Icon.png" width="300" >
-    <img src="Monkey3.png" width="300" >
-    <img src="Monkey6.png" width="300" >
-    <img src="Monkey8.png" width="300" >
-    <img src="vp.png" width="300" >
-    <img src="SlowLorisGreen.png" width="300" >
-    <img src="monk1.jpg" width="300" >
-    <img src="venomousprimate.jpg" width="300" >
-    <img src="pmr1.jpg" width="300" >
-    <img src="pmr2.jpg" width="300" >
-    <img src="pmr3.jpg" width="300" >
+    <img src="img/yoda_high_school.jpg" width="300" >
+    <img src="img/yhs1.jpg" width="300" >
+    <img src="img/yhs2.jpg" width="300" >
+    <img src="img/vadervp1.jpg" width="300" >
+    <img src="img/vadervp2.jpg" width="300" >
+    <img src="img/chewyvp1.jpg" width="300" >
+    <img src="img/chewysoup.jpg" width="300" >
+    <img src="img/jedi.jpg" width="300" >
+</div>
+<div class="title">Venomous Primate</div>
+<div class="content">
+    <img src="img/SirPoisonous.jpg" width="300" >
+    <img src="img/VenomousPrimate_Rajang_Icon.png" width="300" >
+    <img src="img/Monkey3.png" width="300" >
+    <img src="img/Monkey6.png" width="300" >
+    <img src="img/Monkey8.png" width="300" >
+    <img src="img/vp.png" width="300" >
+    <img src="img/SlowLorisGreen.png" width="300" >
+    <img src="img/monk1.jpg" width="300" >
+    <img src="img/venomousprimate.jpg" width="300" >
+    <img src="img/pmr1.jpg" width="300" >
+    <img src="img/pmr2.jpg" width="300" >
+    <img src="img/pmr3.jpg" width="300" >
+</div>
+<div class="title">Gemini Engine</div>
+<div class="content">
+    <img src="gemini/engine1.jpg" width="300" >
+    <img src="gemini/engine2.jpg" width="300" >
+    <img src="gemini/arc1.jpg" width="300" >
+    <img src="gemini/davincicircuit1.jpg" width="300" >
 </div>
 </body>
 </html>
