book and media report content update Tue 11/07/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -36,6 +36,8 @@
 <div class="content">
     <img src="gemini/engine1.jpg" width="300" >
     <img src="gemini/engine2.jpg" width="300" >
+    <img src="gemini/engine3.jpg" width="300" >
+    <img src="gemini/engine4.jpg" width="300" >
     <img src="gemini/arc1.jpg" width="300" >
     <img src="gemini/davincicircuit1.jpg" width="300" >
 </div>
