book and media report content update Tue 11/21/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -21,12 +21,16 @@
 <div class="content">
     <img src="img/SirPoisonous.jpg" width="300" >
     <img src="img/VenomousPrimate_Rajang_Icon.png" width="300" >
-    <img src="img/Monkey3.png" width="300" >
-    <img src="img/Monkey6.png" width="300" >
-    <img src="img/Monkey8.png" width="300" >
-    <img src="img/vp.png" width="300" >
+    <img src="img/monk1.png" width="300" >
+    <img src="img/monk2.jpg" width="300" >
+    <img src="img/monk3.jpg" width="300" >
+    <img src="img/monk4.jpg" width="300" >
+    <img src="img/monk5.jpg" width="300" >
+    <img src="img/monk6.jpg" width="300" >
+    <img src="img/vp1.png" width="300" >
+    <img src="img/vp2.png" width="300" >
+    <img src="img/vp3.png" width="300" >
     <img src="img/SlowLorisGreen.png" width="300" >
-    <img src="img/monk1.jpg" width="300" >
     <img src="img/venomousprimate.jpg" width="300" >
     <img src="img/pmr1.jpg" width="300" >
     <img src="img/pmr2.jpg" width="300" >
