book and media report content update Thu 11/30/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -15,6 +15,10 @@
     <img src="img/vadervp2.jpg" width="300" >
     <img src="img/chewyvp1.jpg" width="300" >
     <img src="img/chewysoup.jpg" width="300" >
+    <img src="img/dinoburger.jpg" width="300" >
+    <img src="img/tricerapants_burger.jpg" width="300" >
+    <img src="img/tricerapants1.jpg" width="300" >
+    <img src="img/optimus_egypt.jpg" width="300" >
     <img src="img/jedi.jpg" width="300" >
 </div>
 <div class="title">Venomous Primate</div>
