book and media report content update Sat 12/02/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -55,6 +55,15 @@
     <img src="gemini/hotrod1.jpg" width="300" >
     <img src="gemini/hotrod2.jpg" width="300" >
     <img src="gemini/hotrod3.jpg" width="300" >
+    <img src="gemini/madmax1.jpg" width="300" >
+    <img src="gemini/doctor1.jpg" width="300" >
+    <img src="gemini/doctor2.jpg" width="300" >
+    <img src="gemini/doctor3.jpg" width="300" >
+    <img src="gemini/doctor4.jpg" width="300" >
+    <img src="gemini/robo-bob1.jpg" width="300" >
+    <img src="gemini/robo-bob2.jpg" width="300" >
+    <img src="gemini/robo-bob3.jpg" width="300" >
+    <img src="gemini/robo-bob4.jpg" width="300" >
 </div>
 </body>
 </html>
