book and media report content update Thu 12/07/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -39,6 +39,7 @@
     <img src="img/pmr1.jpg" width="300" >
     <img src="img/pmr2.jpg" width="300" >
     <img src="img/pmr3.jpg" width="300" >
+    <img src="img/amongus1.jpg" width="300" >
 </div>
 <div class="title">Gemini Engine</div>
 <div class="content">
