book and media report content update Thu 12/07/2023

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -21,6 +21,16 @@
     <img src="img/optimus_egypt.jpg" width="300" >
     <img src="img/jedi.jpg" width="300" >
 </div>
+<div class="title">Among Us</div>
+<div class="content">
+    <img src="img/amongus4.jpg" width="300" >
+    <img src="img/amongus5.jpg" width="300" >
+    <img src="img/amongus7.jpg" width="300" >
+    <img src="img/amongus1.jpg" width="300" >
+    <img src="img/amongus2.jpeg" width="300" >
+    <img src="img/amongus3.jpeg" width="300" >
+    <img src="img/amongus6.jpg" width="300" >
+</div>
 <div class="title">Venomous Primate</div>
 <div class="content">
     <img src="img/SirPoisonous.jpg" width="300" >
@@ -39,7 +49,6 @@
     <img src="img/pmr1.jpg" width="300" >
     <img src="img/pmr2.jpg" width="300" >
     <img src="img/pmr3.jpg" width="300" >
-    <img src="img/amongus1.jpg" width="300" >
 </div>
 <div class="title">Gemini Engine</div>
 <div class="content">
